# backend/public/swagger/swagger.yaml
@@ -1,76 +1,143 @@
-basePath: /api
 consumes:
 - application/json
 - application/xml
 - application/gob
 - application/x-gob
 definitions:
+  Account:
+    description: A account (default view)
+    example:
+      created: 2002-07-08T14:47:02+09:00
+      id: Dolor maxime deleniti.
+      password: Culpa sequi aut quibusdam praesentium ut.
+    properties:
+      created:
+        description: Date of creation
+        example: 2002-07-08T14:47:02+09:00
+        format: date-time
+        type: string
+      id:
+        description: ID of room
+        example: Dolor maxime deleniti.
+        type: string
+      password:
+        example: Culpa sequi aut quibusdam praesentium ut.
+        type: string
+    required:
+    - id
+    - password
+    - created
+    title: 'Mediatype identifier: application/vnd.account+json; view=default'
+    type: object
+  AccountCollection:
+    description: AccountCollection is the media type for an array of Account (default
+      view)
+    example:
+    - created: 2002-07-08T14:47:02+09:00
+      id: Dolor maxime deleniti.
+      password: Culpa sequi aut quibusdam praesentium ut.
+    items:
+      $ref: '#/definitions/Account'
+    title: 'Mediatype identifier: application/vnd.account+json; type=collection; view=default'
+    type: array
   Message:
     description: A Message (default view)
     example:
-      accountID: 1
       body: this is chat message
-      postDate: 2002-07-08T14:47:02+09:00
+      googleUserID: "12345678"
+      postDate: 1973-10-13T08:06:32+09:00
     properties:
-      accountID:
-        example: 1
-        format: int64
-        type: integer
       body:
         example: this is chat message
         maxLength: 400
         minLength: 1
         type: string
+      googleUserID:
+        example: "12345678"
+        type: string
       postDate:
         default: 1978-06-30T10:00:00+09:00
-        example: 2002-07-08T14:47:02+09:00
+        example: 1973-10-13T08:06:32+09:00
         format: date-time
         type: string
     required:
-    - accountID
+    - googleUserID
     - body
     - postDate
     title: 'Mediatype identifier: application/vnd.message+json; view=default'
     type: object
-  MessageCollection:
-    description: MessageCollection is the media type for an array of Message (default
-      view)
+  Message_with_account:
+    description: A Message with account (default view)
     example:
-    - accountID: 1
-      body: this is chat message
-      postDate: 2002-07-08T14:47:02+09:00
-    - accountID: 1
-      body: this is chat message
-      postDate: 2002-07-08T14:47:02+09:00
-    - accountID: 1
-      body: this is chat message
-      postDate: 2002-07-08T14:47:02+09:00
+      body: Odit error.
+      email: Eius qui.
+      googleUserID: Est voluptatibus saepe.
+      id: 4.812766e+18
+      image: Omnis et.
+      name: Nisi expedita.
+      postDate: 1982-07-23T01:49:31+09:00
+    properties:
+      body:
+        example: Odit error.
+        type: string
+      email:
+        example: Eius qui.
+        type: string
+      googleUserID:
+        example: Est voluptatibus saepe.
+        type: string
+      id:
+        example: 4.812766e+18
+        format: int64
+        type: integer
+      image:
+        example: Omnis et.
+        type: string
+      name:
+        example: Nisi expedita.
+        type: string
+      postDate:
+        example: 1982-07-23T01:49:31+09:00
+        format: date-time
+        type: string
+    title: 'Mediatype identifier: application/vnd.message_with_account+json; view=default'
+    type: object
+  Message_with_accountCollection:
+    description: Message_with_accountCollection is the media type for an array of
+      Message_with_account (default view)
+    example:
+    - body: Odit error.
+      email: Eius qui.
+      googleUserID: Est voluptatibus saepe.
+      id: 4.812766e+18
+      image: Omnis et.
+      name: Nisi expedita.
+      postDate: 1982-07-23T01:49:31+09:00
     items:
-      $ref: '#/definitions/Message'
-    title: 'Mediatype identifier: application/vnd.message+json; type=collection; view=default'
+      $ref: '#/definitions/Message_with_account'
+    title: 'Mediatype identifier: application/vnd.message_with_account+json; type=collection;
+      view=default'
     type: array
   MessagePayload:
     example:
-      accountID: 1
       body: this is chat message
-      postDate: 1990-05-15T15:21:11+09:00
+      googleUserID: "12345678"
+      postDate: 1978-09-18T20:35:11+09:00
     properties:
-      accountID:
-        example: 1
-        format: int64
-        type: integer
       body:
         example: this is chat message
         maxLength: 400
         minLength: 1
         type: string
+      googleUserID:
+        example: "12345678"
+        type: string
       postDate:
         default: 1978-06-30T10:00:00+09:00
-        example: 1990-05-15T15:21:11+09:00
+        example: 1978-09-18T20:35:11+09:00
         format: date-time
         type: string
     required:
-    - accountID
     - body
     - postDate
     title: MessagePayload
@@ -78,14 +145,14 @@ definitions:
   Room:
     description: A room (default view)
     example:
-      created: 1976-11-05T19:47:09+09:00
+      created: 2014-08-14T02:16:08+09:00
       description: room description
-      id: 5.4174466e+18
+      id: 2.4780884e+18
       name: room001
     properties:
       created:
         description: Date of creation
-        example: 1976-11-05T19:47:09+09:00
+        example: 2014-08-14T02:16:08+09:00
         format: date-time
         type: string
       description:
@@ -95,7 +162,7 @@ definitions:
         type: string
       id:
         description: ID of room
-        example: 5.4174466e+18
+        example: 2.4780884e+18
         format: int64
         type: integer
       name:
@@ -110,13 +177,17 @@ definitions:
   RoomCollection:
     description: RoomCollection is the media type for an array of Room (default view)
     example:
-    - created: 1976-11-05T19:47:09+09:00
+    - created: 2014-08-14T02:16:08+09:00
       description: room description
-      id: 5.4174466e+18
+      id: 2.4780884e+18
       name: room001
-    - created: 1976-11-05T19:47:09+09:00
+    - created: 2014-08-14T02:16:08+09:00
       description: room description
-      id: 5.4174466e+18
+      id: 2.4780884e+18
+      name: room001
+    - created: 2014-08-14T02:16:08+09:00
+      description: room description
+      id: 2.4780884e+18
       name: room001
     items:
       $ref: '#/definitions/Room'
@@ -124,14 +195,14 @@ definitions:
     type: array
   RoomPayload:
     example:
-      created: 1994-12-20T11:39:22+09:00
+      created: 1988-07-20T23:26:33+09:00
       description: room description
-      id: 8.499853e+18
+      id: 6.0919464e+18
       name: room001
     properties:
       created:
         description: Date of creation
-        example: 1994-12-20T11:39:22+09:00
+        example: 1988-07-20T23:26:33+09:00
         format: date-time
         type: string
       description:
@@ -141,7 +212,7 @@ definitions:
         type: string
       id:
         description: ID of room
-        example: 8.499853e+18
+        example: 6.0919464e+18
         format: int64
         type: integer
       name:
@@ -196,10 +267,100 @@ info:
   title: goa study chat
   version: ""
 paths:
-  /rooms:
+  /:
+    get:
+      operationId: serve#/
+      responses:
+        "200":
+          description: File downloaded
+          schema:
+            type: file
+      schemes:
+      - http
+      summary: Download ./goa-chat-client/build/index.html
+  /api/accounts:
+    get:
+      description: Retrieve all accunts.
+      operationId: account#list
+      produces:
+      - application/vnd.account+json; type=collection
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/AccountCollection'
+        "404":
+          description: Not Found
+      schemes:
+      - http
+      summary: list account
+      tags:
+      - account
+    post:
+      description: Create new account
+      operationId: account#post
+      parameters:
+      - in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/MessagePayload'
+      responses:
+        "201":
+          description: Resource created
+          headers:
+            Location:
+              description: href to created resource
+              pattern: ^/accounts/[0-9]+$
+              type: string
+        "400":
+          description: Bad Request
+      schemes:
+      - http
+      summary: post account
+      tags:
+      - account
+  /api/accounts/{user}:
+    get:
+      description: Retrieve account with given id or something
+      operationId: account#show
+      parameters:
+      - in: path
+        name: user
+        required: true
+        type: string
+      produces:
+      - application/vnd.goa.error
+      - application/vnd.account+json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/Account'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
+        "404":
+          description: Not Found
+      schemes:
+      - http
+      summary: show account
+      tags:
+      - account
+  /api/rooms:
     get:
       description: Retrieve all rooms.
       operationId: room#list
+      parameters:
+      - in: query
+        name: limit
+        required: false
+        type: integer
+      - in: query
+        name: offset
+        required: false
+        type: integer
       produces:
       - application/vnd.room+json; type=collection
       responses:
@@ -215,7 +376,11 @@ paths:
       tags:
       - room
     post:
-      description: Create new Room
+      description: |-
+        Create new Room
+
+        Required security scopes:
+          * `api:access`
       operationId: room#post
       parameters:
       - in: body
@@ -235,10 +400,13 @@ paths:
           description: Bad Request
       schemes:
       - http
+      security:
+      - jwt:
+        - api:access
       summary: post room
       tags:
       - room
-  /rooms/{roomID}:
+  /api/rooms/{roomID}:
     get:
       description: Retrieve room with given id
       operationId: room#show
@@ -266,22 +434,30 @@ paths:
       summary: show room
       tags:
       - room
-  /rooms/{roomID}/messages:
+  /api/rooms/{roomID}/messages:
     get:
       description: Retrieve all messages.
       operationId: message#list
       parameters:
+      - in: query
+        name: limit
+        required: false
+        type: integer
+      - in: query
+        name: offset
+        required: false
+        type: integer
       - in: path
         name: roomID
         required: true
         type: integer
       produces:
-      - application/vnd.message+json; type=collection
+      - application/vnd.message_with_account+json; type=collection
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/MessageCollection'
+            $ref: '#/definitions/Message_with_accountCollection'
         "404":
           description: Not Found
       schemes:
@@ -290,7 +466,11 @@ paths:
       tags:
       - message
     post:
-      description: Create new message
+      description: |-
+        Create new message
+
+        Required security scopes:
+          * `api:access`
       operationId: message#post
       parameters:
       - in: path
@@ -314,10 +494,13 @@ paths:
           description: Bad Request
       schemes:
       - http
+      security:
+      - jwt:
+        - api:access
       summary: post message
       tags:
       - message
-  /rooms/{roomID}/messages/{messageID}:
+  /api/rooms/{roomID}/messages/{messageID}:
     get:
       description: Retrieve message with given id
       operationId: message#show
@@ -349,7 +532,7 @@ paths:
       summary: show message
       tags:
       - message
-  /rooms/{roomID}/watch:
+  /api/rooms/{roomID}/watch:
     get:
       description: Retrieve room with given id
       operationId: room#watch
@@ -372,6 +555,27 @@ paths:
       summary: watch room
       tags:
       - room
+  /static/{filepath}:
+    get:
+      operationId: serve#/static/*filepath
+      parameters:
+      - description: Relative file path
+        in: path
+        name: filepath
+        required: true
+        type: string
+      responses:
+        "200":
+          description: File downloaded
+          schema:
+            type: file
+        "404":
+          description: File not found
+          schema:
+            $ref: '#/definitions/error'
+      schemes:
+      - http
+      summary: Download ./goa-chat-client/build/static
 produces:
 - application/json
 - application/xml
@@ -385,9 +589,21 @@ responses:
   OK:
     description: OK
     schema:
-      $ref: '#/definitions/Message'
+      $ref: '#/definitions/Account'
   SwitchingProtocols:
     description: Switching Protocols
 schemes:
 - http
+securityDefinitions:
+  basic_auth:
+    type: basic
+  jwt:
+    description: |2-
+
+
+      **Security Scopes**:
+        * `api:access`: API access
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
